scrapcore_serialization_macro/src/snapshots/scrapcore_serialization_macro__tests__struct_tests@raw_conflict.rs.snap
---
source: scrapcore_serialization_macro/src/tests.rs
expression: check_model(path)
input_file: scrapcore_serialization_macro/src/test_cases/model/struct/raw_conflict.rs
---
#[derive(Debug, DatabaseModel)]
struct Test {
    #[model(ty = "f64", raw)]
    a: u32,
}
::core::compile_error! {
    "`raw` attribute field can not be used at the same time as `ty` or `with` attributes"
}
