scrapcore_serialization_macro/src/snapshots/scrapcore_serialization_macro__tests__struct_tests@type_conversions.rs.snap
---
source: scrapcore_serialization_macro/src/tests.rs
expression: check_model(path)
input_file: scrapcore_serialization_macro/src/test_cases/model/struct/type_conversions.rs
---
#[derive(Debug, DatabaseModel)]
struct Test {
    #[model(raw)]
    a: u32,
    #[model(with = custom_fn)]
    b: String,
    #[model(ty = "FxHashMap<ItemId, f64>")]
    c: IntMap<VariableId, f64>,
    #[model(ty = "f32", with = "stringify_fn")]
    d: String,
    #[model(from = "u32")]
    e: u64,
    #[model(raw, from = "u32")]
    e: u64,
}
#[derive(Debug, Clone, serde::Serialize, serde::Deserialize)]
#[derive(schemars::JsonSchema)]
#[serde(rename_all = "camelCase")]
pub struct TestSerialized {
    a: u32,
    b: <String as scrapcore_serialization::serialization::SerializationFallback>::Fallback,
    c: FxHashMap<ItemId, f64>,
    d: f32,
    e: <u32 as scrapcore_serialization::serialization::SerializationFallback>::Fallback,
    e: u32,
}
#[automatically_derived]
impl scrapcore_serialization::serialization::SerializationFallback for Test {
    type Fallback = TestSerialized;
}
#[automatically_derived]
impl AsRef<Test> for Test {
    fn as_ref(&self) -> &Test {
        &self
    }
}
#[automatically_derived]
impl<Registry> scrapcore_serialization::serialization::DeserializeModel<Test, Registry>
for TestSerialized
where
    FxHashMap<
        ItemId,
        f64,
    >: scrapcore_serialization::serialization::DeserializeModel<
        IntMap<VariableId, f64>,
        Registry,
    >,
    <u32 as scrapcore_serialization::serialization::SerializationFallback>::Fallback: scrapcore_serialization::serialization::DeserializeModel<
        u32,
        Registry,
    >,
    Registry: scrapcore_serialization::registry::PartialRegistry,
{
    fn deserialize(
        self,
        registry: &mut Registry,
    ) -> Result<
        Test,
        scrapcore_serialization::serialization::error::DeserializationError<Registry>,
    > {
        let serialized = self;
        Ok(Test {
            a: {
                let item = serialized.a;
                scrapcore_serialization::serialization::error::s_try(
                    &mut *registry,
                    |registry: &mut Registry| {
                        let item: u32 = item;
                        Ok(item)
                    },
                    Some(|| scrapcore_serialization::serialization::error::DeserializationErrorStackItem::Field(
                        stringify!(a),
                    )),
                )?
            },
            b: {
                let item = serialized.b;
                scrapcore_serialization::serialization::error::s_try(
                    &mut *registry,
                    |registry: &mut Registry| {
                        let item: String = custom_fn(item, registry)?;
                        Ok(item)
                    },
                    Some(|| scrapcore_serialization::serialization::error::DeserializationErrorStackItem::Field(
                        stringify!(b),
                    )),
                )?
            },
            c: {
                let item = serialized.c;
                scrapcore_serialization::serialization::error::s_try(
                    &mut *registry,
                    |registry: &mut Registry| {
                        let item: IntMap<VariableId, f64> = scrapcore_serialization::serialization::DeserializeModel::<
                            IntMap<VariableId, f64>,
                            Registry,
                        >::deserialize(item, registry)?;
                        Ok(item)
                    },
                    Some(|| scrapcore_serialization::serialization::error::DeserializationErrorStackItem::Field(
                        stringify!(c),
                    )),
                )?
            },
            d: {
                let item = serialized.d;
                scrapcore_serialization::serialization::error::s_try(
                    &mut *registry,
                    |registry: &mut Registry| {
                        let item: String = stringify_fn(item, registry)?;
                        Ok(item)
                    },
                    Some(|| scrapcore_serialization::serialization::error::DeserializationErrorStackItem::Field(
                        stringify!(d),
                    )),
                )?
            },
            e: {
                let item = serialized.e;
                scrapcore_serialization::serialization::error::s_try(
                    &mut *registry,
                    |registry: &mut Registry| {
                        let item: u32 = scrapcore_serialization::serialization::DeserializeModel::<
                            u32,
                            Registry,
                        >::deserialize(item, registry)?;
                        let item: u64 = <u64 as From<u32>>::from(item);
                        Ok(item)
                    },
                    Some(|| scrapcore_serialization::serialization::error::DeserializationErrorStackItem::Field(
                        stringify!(e),
                    )),
                )?
            },
            e: {
                let item = serialized.e;
                scrapcore_serialization::serialization::error::s_try(
                    &mut *registry,
                    |registry: &mut Registry| {
                        let item: u32 = item;
                        let item: u64 = <u64 as From<u32>>::from(item);
                        Ok(item)
                    },
                    Some(|| scrapcore_serialization::serialization::error::DeserializationErrorStackItem::Field(
                        stringify!(e),
                    )),
                )?
            },
        })
    }
}
